--- a/page_analyzer/templates/index.html
+++ b/page_analyzer/templates/index.html
@@ -1,15 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-</head>
-<body>
-    <div class="container">
-        <h1>Hello, Hexlet!</h1>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+    <main class="flex-grow-1">
+        <div class="container-lg mt-3">
+        <h1></h1>
+        <div class="row">
+            <div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5">
+            <h1 class="display-3">Анализатор страниц</h1>
+            <p class="lead">Бесплатно проверяйте сайты на SEO-пригодность</p>
+            <form action="{{ url_for('create_urls') }}" method="post" class="d-flex justify-content-center">
+                <label for="text" class="visually-hidden">Url для проверки</label>
+                <input type="text" name="url" placeholder="https://www.example.com" value="{{ url | default('') }}" class="form-control form-control-lg" required="">
+                {% if error %}
+                <div class="text-danger mt-1">{{ error }}</div>
+                {% endif %}
+                <input type="submit" class="btn btn-primary  btn-lg ms-3 px-5 text-uppercase mx-3" value="Проверить">
+            </form>
+            </div>
+        </div>
+        </div>
+    </main>
+{% endblock %}
