--- a/page_analyzer/templates/urls/index.html
+++ b/page_analyzer/templates/urls/index.html
@@ -9,6 +9,7 @@
         <th>ID</th>
         <th>Name</th>
         <th>Created at</th>
+        <th>Update</th>
       </tr>
     </thead>
     <tbody>
@@ -21,6 +22,11 @@
             </a>
           </td>
           <td>{{ url.created_at.strftime('%Y-%m-%d') }}</td>
+          {% if url.last_check %}
+            <td>{{ url.last_check.strftime('%Y-%m-%d') }}</td>
+          {% else %}
+            <td>{{ url.last_check }}</td>
+          {% endif %}
         </tr>
       {% endfor %}
     </tbody>
