--- a/page_analyzer/templates/urls/index.html
+++ b/page_analyzer/templates/urls/index.html
@@ -10,6 +10,7 @@
         <th>Name</th>
         <th>Created at</th>
         <th>Update</th>
+        <th>Statsus Code</th>
       </tr>
     </thead>
     <tbody>
@@ -24,8 +25,10 @@
           <td>{{ url.created_at.strftime('%Y-%m-%d') }}</td>
           {% if url.last_check %}
             <td>{{ url.last_check.strftime('%Y-%m-%d') }}</td>
+            <td>{{ url.status_code }}</td>
           {% else %}
-            <td>{{ url.last_check }}</td>
+            <td>None</td>
+            <td>None</td>
           {% endif %}
         </tr>
       {% endfor %}
