add beautifulsoup and tite,h1,description

--- a/page_analyzer/templates/urls/index.html
+++ b/page_analyzer/templates/urls/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1 class="mb-4">Сайты</h1>
+  <h1 class="mb-4">Список сайтов</h1>
 
   <table class="table table-bordered" data-test="urls">
     <thead>
@@ -9,7 +9,7 @@
         <th>ID</th>
         <th>Name</th>
         <th>Created at</th>
-        <th>Update</th>
+        <th>last check</th>
         <th>Statsus Code</th>
       </tr>
     </thead>
