--- a/page_analyzer/templates/urls/show.html
+++ b/page_analyzer/templates/urls/show.html
@@ -31,6 +31,9 @@
         <th>ID</th>
         <th>Дата создания</th>
         <th>Код ответа</th>
+        <th>Заголовок</th>
+        <th>Название</th>
+        <th>Описание</th>
       </tr>
     </thead>
     <tbody>
@@ -39,6 +42,9 @@
         <td>{{ check.id }}</td>
         <td>{{ check.created_at.strftime('%Y-%m-%d') }}</td>
         <td>{{ check.status_code }}</td>
+        <th>{{ check.h1 }}</th>
+        <th>{{ check.title }}</th>
+        <th>{{ check.description }}</th>
       </tr>
       {% endfor %}
     </tbody>
