--- a/page_analyzer/templates/index.html
+++ b/page_analyzer/templates/index.html
@@ -3,7 +3,6 @@
 {% block content %}
     <main class="flex-grow-1">
         <div class="container-lg mt-3">
-        <h1></h1>
         <div class="row">
             <div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5">
             <h1 class="display-3">Анализатор страниц</h1>
@@ -11,8 +10,8 @@
             <form action="{{ url_for('create_urls') }}" method="post" class="d-flex justify-content-center">
                 <label for="text" class="visually-hidden">Url для проверки</label>
                 <input type="text" name="url" placeholder="https://www.example.com" value="{{ url | default('') }}" class="form-control form-control-lg" required="">
-                {% if error %}
-                <div class="text-danger mt-1">{{ error }}</div>
+                {% if errors.url %}
+                <div class="text-danger mt-1">{{ errors.url }}</div>
                 {% endif %}
                 <input type="submit" class="btn btn-primary  btn-lg ms-3 px-5 text-uppercase mx-3" value="Проверить">
             </form>
