--- a/page_analyzer/templates/urls/show.html
+++ b/page_analyzer/templates/urls/show.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1></h1>
   <h1 class="mb-4">Сайт: {{ url.name }}</h1>
 
   <table class="table table-bordered" data-test="url">
@@ -42,9 +41,9 @@
         <td>{{ check.id }}</td>
         <td>{{ check.created_at.strftime('%Y-%m-%d') }}</td>
         <td>{{ check.status_code }}</td>
-        <th>{{ check.h1 }}</th>
-        <th>{{ check.title }}</th>
-        <th>{{ check.description }}</th>
+        <td>{{ check.h1 }}</td>
+        <td>{{ check.title }}</td>
+        <td>{{ check.description }}</td>
       </tr>
       {% endfor %}
     </tbody>
