--- a/page_analyzer/templates/urls/index.html
+++ b/page_analyzer/templates/urls/index.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1 class="mb-4">Список сайтов</h1>
+  <h1 class="mb-4">Сайты</h1>
 
   <table class="table table-bordered" data-test="urls">
     <thead>
       <tr>
         <th>ID</th>
-        <th>Name</th>
-        <th>Created at</th>
-        <th>last check</th>
-        <th>Status Code</th>
+        <th>Имя</th>
+        <th>Дата создания</th>
+        <th>Последняя проверка</th>
+        <th>Код ответа</th>
       </tr>
     </thead>
     <tbody>
